# Operating-System

./: 2.模块设计与实现.txt  CMakeLists.txt  Project Overview.txt  README.md  README.txt  第三部分方案大纲.txt  问题汇总.txt
Code/data/: result.txt  track_sequence.txt
Code/include/: file.h  memory.h  process.h  virtual_memory.h
Code/src/: file.cpp  function.cpp  main.cpp  memory.cpp  process.cpp  virtual_memory.cpp
